# GC

./: CMakeLists.txt  GF.cpp  README.md  main.cpp
C/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  GF.h
Python/: GC.sln
Python/GC/: Consumer.py  Decoder.py  Encoder.py  GC.pyproj  demo.py
